<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.github.fgoncalves.qa.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageOfTheHouse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:contentDescription="@string/picture_of_a_house"
            android:src="@drawable/home" />

        <Button
            android:id="@+id/OutOfHomeBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Click Me!"
            android:textStyle="bold"
            android:layout_gravity="center"/>
    </LinearLayout>
</layout>