<resources>
    <string name="app_name">QA</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="error_user_does_not_exist">Account does not exist</string>
    <string name="error_wrong_password">Wrong password</string>
    <string name="picture_of_a_house">Picture of a house</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Welcome!</string>
    <string name="click_me">Click Me!</string>
</resources>
